<resources>
    <string name="app_name">Karar ve Döngü Ünite 4</string>
    <string name="uyg1">Uygulama 1 (100\'den Büyükse)</string>
    <string name="uyg2">Uygulama 2 (2 Sayi Büyükse)</string>
    <string name="uyg3">Uygulama 3 (Giriş)</string>
    <string name="uyg4">Uygulama 4 (Konum Servisi)</string>
    <string name="uyg5">Uygulama 5 (Ortalama Hesaplama)</string>
    <string name="uyg6">Uygulama 6 (Ay Hesaplama)</string>
    <string name="uyg7">Uygulama 7 (for döngüsü)</string>
    <string name="uyg8">Uygulama 8 (3\'er 3\'er sayılar)</string>
    <string name="uyg9">Uygulama 9 (Sayılar)</string>
    <string name="uyg10">Uygulama 10 (Faktoriyel)</string>
    <string name="goldsoru">Gold Soru</string>
    <string name="goldsoru1">Gold Soru 1 (Çarpım Tablosu)</string>
    <string name="goldsoru2">Gold Soru 2 (Tek - Çift Sayılar)</string>
    <string name="kontrol_et">Kontrol Et</string>
    <string name="not">Not</string>
    <string name="sayi">Sayı</string>
    <string name="geri">Geri</string>
    <string name="sifre">Şifre</string>
    <string name="kullanici_adi">Kullanıcı Adı</string>
    <string name="onayla">Onayla</string>
    <string name="konum_servisleri">Konum Servisleri</string>
    <string name="konum_bilgilerini_al">Konum Bilgilerini Al</string>
    <string name="konum_bilgilerini_gonder">Konum Bilgilerini Gönder</string>
    <string name="ders_notu_1">1. Ders Notu</string>
    <string name="ders_notu_2">2. Ders Notu</string>
    <string name="ders_notu_3">3. Ders Notu</string>
    <string name="ay">Ay</string>
    <string name="calistir">Çalıştır</string>
    <string name="cift_sayilar">Çift Sayılar</string>
    <string name="tum_sayilar">Tüm Sayılar</string>
    <string name="tek_sayilar">Tek Sayılar</string>
    <string name="sayilar">Sayılar</string>
    <string name="sonuc">Sonuç:</string>
    <string name="carpimtablosu">Çarpım Tablosu</string>
    <string name="tek_sayilar_toplami">Tek Sayılar Toplamı</string>
    <string name="cift_sayilar_toplami">Çift Sayılar Toplamı</string>
</resources>