<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnUyg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btnUyg1"
        android:text="@string/uyg1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/btnUyg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btnUyg2"
        android:text="@string/uyg2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUyg1"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnUyg3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btnUyg3"
        android:text="@string/uyg3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUyg2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnUyg4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btnUyg4"
        android:text="@string/uyg4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUyg3"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnUyg5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btnUyg5"
        android:text="@string/uyg5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUyg4"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnUyg6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btnUyg6"
        android:text="@string/uyg6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUyg5"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnUyg7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btnUyg7"
        android:text="@string/uyg7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUyg6"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnUyg8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btnUyg8"
        android:text="@string/uyg8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUyg7"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnUyg9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btnUyg9"
        android:text="@string/uyg9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUyg8"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnUyg10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btnUyg10"
        android:text="@string/uyg10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUyg9"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goldsoru"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUyg10"
        app:layout_constraintVertical_bias="0.039" />

    <Button
        android:id="@+id/btnGoldSoru1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gold"
        android:onClick="btnGoldSoru1"
        android:text="@string/goldsoru1"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.048" />

    <Button
        android:id="@+id/btnGoldSoru2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gold"
        android:onClick="btnGoldSoru2"
        android:text="@string/goldsoru2"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGoldSoru1"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>